--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <div class="parallax home__parallax home__parallax-img3" data-rellax-speed="-6"></div>
                 <div class="parallax home__parallax home__parallax-img4" data-rellax-speed="-3"></div>
 
-                <h1 class="parallax home__title" data-rellax-speed="-6">Mountain</h1>
-                <span class="parallax home__subtitle" data-rellax-speed="-5">Mountain explore</span> 
+                <h1 class="parallax home__title" data-rellax-speed="-6">Hello~Bello~</h1>
+                <span class="parallax home__subtitle" data-rellax-speed="-5">Hello~Bello~ explore</span> 
 
                 <div class="home__scroll">
                    <a href="#section"><i class='bx bx-mouse'></i></a>
@@ -75,3 +75,4 @@
     </body>
 
 </html>
+
