Make homepage copy bilingual Chinese-English

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Parallax responsive landing page</title>
+        <title>視差響應式登陸頁｜Parallax Responsive Landing Page</title>
 
         <link rel="stylesheet" href="assets/css/styles.css">
 
@@ -22,10 +22,10 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
-                        <li class="nav__item"><a href="#" class="nav__link">Explore</a></li>
-                        <li class="nav__item"><a href="#" class="nav__link">Aventure</a></li>
-                        <li class="nav__item"><a href="#" class="nav__link">Discover</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">首頁 Home</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">探索 Explore</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">冒險 Adventure</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">發現 Discover</a></li>
                     </ul>
                 </div>
             </nav>
@@ -40,7 +40,7 @@
                 <div class="parallax home__parallax home__parallax-img4" data-rellax-speed="-3"></div>
 
                 <h1 class="parallax home__title" data-rellax-speed="-6">Hello~Bello~</h1>
-                <span class="parallax home__subtitle" data-rellax-speed="-5">Hello~Bello~ explore</span> 
+                <span class="parallax home__subtitle" data-rellax-speed="-5">一起探索 Explore Together</span> 
 
                 <div class="home__scroll">
                    <a href="#section"><i class='bx bx-mouse'></i></a>
@@ -51,8 +51,8 @@
             <section class="l-section" id="section">
                 <div class="section">
                     <div class="section__data">
-                        <h2 class="section__title">Scaling mountains</h2>
-                        <p class="section__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, laboriosam. Esse ipsum culpa laboriosam, totam hic quidem recusandae eos, numquam iusto aliquid expedita est sapiente quaerat inventore voluptatem corporis aliquam.</p>
+                        <h2 class="section__title">攀越群山 Scaling Mountains</h2>
+                        <p class="section__text">踏上旅程，穿越雲霧與山谷，感受每一步的高度與風景。Start your journey through misty valleys and mountain ridges, and feel the thrill of every step and every view.</p>
                     </div>
         
                     <img src="assets/img/imgm.jpg" alt="" class="section__img">
